--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-jwt": "^1.2.0",
     "react-loading-skeleton": "^3.3.1",
     "react-multi-select-component": "^4.3.4",
+    "react-razorpay": "^2.0.1",
     "react-redux": "^8.1.3",
     "react-responsive-modal": "^6.4.1",
     "react-router-dom": "^5.3.4",
