--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@headlessui/react": "^1.7.15",
     "@pathofdev/react-tag-input": "^1.0.7",
     "@preact/signals-react": "^1.3.6",
+    "@react-pdf/font": "^2.4.2",
     "@react-pdf/renderer": "^3.1.6",
     "@reduxjs/toolkit": "^1.9.7",
     "@stripe/react-stripe-js": "^2.4.0",
