--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-jwt": "^1.2.0",
     "react-loading-skeleton": "^3.3.1",
     "react-multi-select-component": "^4.3.4",
+    "react-pdf": "^7.7.0",
     "react-razorpay": "^2.0.1",
     "react-redux": "^8.1.3",
     "react-responsive-modal": "^6.4.1",
